--- a/index.html
+++ b/index.html
@@ -38,37 +38,116 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="jsonrates" class="anchor" href="#jsonrates" aria-hidden="true"><span class="octicon octicon-link"></span></a>JsonRates</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p><a href="https://travis-ci.org/askuratovsky/money-json-rates"><img src="https://travis-ci.org/askuratovsky/money-json-rates.svg?branch=master" alt="Build Status"></a></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>This gem extends Money::Bank::VariableExchange of gem <a href="https://github.com/RubyMoney/money">money</a> and gives you access to the current exchange rates using jsonrates.com api</p>
+
+<h2>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
+
+<p>This gem uses <a href="http://jsonrates.com/">jsonrates.com</a> api, so</p>
+
+<ul>
+<li>it's free</li>
+<li>supports 168 currencies</li>
+<li>precision of rates up to 8 digits after point</li>
+<li>uses fast and reliable json api</li>
+<li>average response time &lt; 20ms</li>
+<li>no limitations for requesting the API</li>
+<li>supports caching currency rates</li>
+</ul>
+
+<h2>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
+
+<p>Add this line to your application's Gemfile:</p>
+
+<div class="highlight highlight-ruby"><pre><span class="pl-k">gem</span> <span class="pl-s"><span class="pl-pds">'</span>money-json-rates<span class="pl-pds">'</span></span></pre></div>
+
+<p>And then execute:</p>
+
+<pre><code>$ bundle
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Or install it yourself as:</p>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<pre><code>$ gem install money-json-rates
+</code></pre>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h2>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<p>First, you should to register account on <a href="http://jsonrates.com/">jsonrates.com</a> and get your personal api_key.</p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<div class="highlight highlight-ruby"><pre><span class="pl-k">require</span> <span class="pl-s"><span class="pl-pds">'</span>money<span class="pl-pds">'</span></span>
+<span class="pl-k">require</span> <span class="pl-s"><span class="pl-pds">'</span>money/bank/json_rates<span class="pl-pds">'</span></span>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<span class="pl-c"># (optional)</span>
+<span class="pl-c"># set the seconds after than the current rates are automatically expired</span>
+<span class="pl-c"># by default, they never expire</span>
+<span class="pl-c1">Money</span>::<span class="pl-c1">Bank</span>::<span class="pl-c1">JsonRates</span>.ttl_in_seconds <span class="pl-k">=</span> <span class="pl-c1">7200</span> <span class="pl-c"># 2 hours ttl</span>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<span class="pl-c"># create new bank instance</span>
+bank <span class="pl-k">=</span> <span class="pl-c1">Money</span>::<span class="pl-c1">Bank</span>::<span class="pl-c1">JsonRates</span>.<span class="pl-k">new</span>
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<span class="pl-c"># create new bank instance with block specifying rounding of exchange result</span>
+bank <span class="pl-k">=</span> <span class="pl-c1">Money</span>::<span class="pl-c1">Bank</span>::<span class="pl-c1">JsonRates</span>.<span class="pl-k">new</span> {|<span class="pl-smi">n</span>| n.round(<span class="pl-c1">4</span>)} <span class="pl-c"># round result to 4 digits after point</span>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<span class="pl-c"># specify your api_key from jsonrates.com</span>
+bank.api_key <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>xx-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<span class="pl-pds">'</span></span>
+
+<span class="pl-c"># set default bank to instance</span>
+<span class="pl-c1">Money</span>.default_bank <span class="pl-k">=</span> bank</pre></div>
+
+<p>Also you can setup JsonRates as default_bank for <a href="https://github.com/RubyMoney/money-rails">money-rails</a> gem in config/initializers/money.rb</p>
+
+<div class="highlight highlight-ruby"><pre><span class="pl-k">require</span> <span class="pl-s"><span class="pl-pds">'</span>money/bank/json_rates<span class="pl-pds">'</span></span>
+<span class="pl-c1">MoneyRails</span>.configure <span class="pl-k">do </span>|<span class="pl-smi">config</span>|
+
+  bank <span class="pl-k">=</span> <span class="pl-c1">Money</span>::<span class="pl-c1">Bank</span>::<span class="pl-c1">JsonRates</span>.<span class="pl-k">new</span>
+  bank.api_key <span class="pl-k">=</span> <span class="pl-s"><span class="pl-pds">'</span>xx-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx<span class="pl-pds">'</span></span>
+  config.default_bank <span class="pl-k">=</span> bank
+
+<span class="pl-k">end</span></pre></div>
+
+<p>An <code>NoApiKey</code> will be thrown if api_key was not specified.</p>
+
+<p>An <code>JsonRatesRequestError</code> will be thrown if jsonrates.com api returns error on api request.</p>
+
+<h2>
+<a id="refs" class="anchor" href="#refs" aria-hidden="true"><span class="octicon octicon-link"></span></a>Refs</h2>
+
+<p>Created using <code>VariableExchange</code> implementation and using <code>google_currency</code> basics.</p>
+
+<ul>
+<li><a href="https://github.com/RubyMoney/money">https://github.com/RubyMoney/money</a></li>
+<li><a href="https://github.com/RubyMoney/google_currency">https://github.com/RubyMoney/google_currency</a></li>
+</ul>
+
+<p>More implementations:</p>
+
+<ul>
+<li><a href="https://github.com/RubyMoney/eu_central_bank">https://github.com/RubyMoney/eu_central_bank</a></li>
+<li><a href="https://github.com/matiaskorhonen/nordea">https://github.com/matiaskorhonen/nordea</a></li>
+<li><a href="https://github.com/slbug/nbrb_currency">https://github.com/slbug/nbrb_currency</a></li>
+<li><a href="https://github.com/spk/money-open-exchange-rates">https://github.com/spk/money-open-exchange-rates</a></li>
+<li><a href="https://github.com/atwam/money-historical-bank">https://github.com/atwam/money-historical-bank</a></li>
+<li><a href="https://github.com/rmustafin/russian_central_bank">https://github.com/rmustafin/russian_central_bank</a></li>
+</ul>
+
+<h2>
+<a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributing</h2>
+
+<ol>
+<li>Fork it ( <a href="https://github.com/askuratovsky/money-json-rates/fork">https://github.com/askuratovsky/money-json-rates/fork</a> )</li>
+<li>Create your feature branch (<code>git checkout -b my-new-feature</code>)</li>
+<li>Commit your changes (<code>git commit -am 'Add some feature'</code>)</li>
+<li>Push to the branch (<code>git push origin my-new-feature</code>)</li>
+<li>Create a new Pull Request</li>
+</ol>
       </section>
 
     </div>
