Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>money-json-rates</h1>
-          <p>MoneyJsonRates extends Money::Bank::Base and gives you access to the current real-time exchange rates</p>
+          <p>JsonRates extends Money::Bank::Base and gives you access to the current real-time exchange rates</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/askuratovsky">askuratovsky</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
@@ -48,7 +48,7 @@
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
-<p>This gem uses <a href="http://jsonrates.com/">jsonrates.com</a> api, so</p>
+<p>This gem uses <a href="http://jsonrates.com/">jsonrates.com api</a>, so</p>
 
 <ul>
 <li>it's free</li>
