Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>money-json-rates</h1>
-          <p>JsonRates extends Money::Bank::Base and gives you access to the current real-time exchange rates</p>
+          <p>JsonRates extends Money::Bank::VariableExchange and gives you access to the current real-time exchange rates</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/askuratovsky">askuratovsky</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
@@ -43,7 +43,7 @@
 
 <p><a href="https://travis-ci.org/askuratovsky/money-json-rates"><img src="https://travis-ci.org/askuratovsky/money-json-rates.svg?branch=master" alt="Build Status"></a></p>
 
-<p>This gem extends Money::Bank::VariableExchange of gem <a href="https://github.com/RubyMoney/money">money</a> and gives you access to the current exchange rates using jsonrates.com api</p>
+<p>This gem extends Money::Bank::VariableExchange of gem <a href="https://github.com/RubyMoney/money">money</a> and gives you access to the current exchange rates</p>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
