--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>money-json-rates</h1>
-          <p>JsonRates extends Money::Bank::VariableExchange and gives you access to the current real-time exchange rates</p>
+          <p>Ruby Money::Bank interface for jsonrates.com exchange data</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/askuratovsky">askuratovsky</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
