Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <h1>
-<a id="jsonrates" class="anchor" href="#jsonrates" aria-hidden="true"><span class="octicon octicon-link"></span></a>JsonRates</h1>
+<a id="moneybankjsonrates" class="anchor" href="#moneybankjsonrates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Money::Bank::JsonRates</h1>
 
 <p><a href="https://travis-ci.org/askuratovsky/money-json-rates"><img src="https://travis-ci.org/askuratovsky/money-json-rates.svg?branch=master" alt="Build Status"></a></p>
 
