Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,9 +46,16 @@
 <p>This gem extends Money::Bank::VariableExchange of gem <a href="https://github.com/RubyMoney/money">money</a> and gives you access to the current exchange rates using jsonrates.com api</p>
 
 <h2>
+<a id="warning" class="anchor" href="#warning" aria-hidden="true"><span class="octicon octicon-link"></span></a>Warning</h2>
+
+<p>Since jsonrates is <a href="http://jsonrates.com/about/">becoming a part of apilayer’s currencylayer API</a>, jsonrates api is now deprecated. The previous jsonrates API and this gem shall be deprecated but will still be available for use until June 30th 11:59:59 PM London time.</p>
+
+<p>Please register new account on <a href="https://currencylayer.com/">currencylayer.com</a> and install gem <a href="https://github.com/askuratovsky/currencylayer">currencylayer</a>.</p>
+
+<h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
 
-<p>This gem uses <a href="http://jsonrates.com/">jsonrates.com</a> api, so</p>
+<p>This gem uses <a href="http://jsonrates.com/">jsonrates.com api</a>, so</p>
 
 <ul>
 <li>it's free</li>
